<resources>
    <string name="app_name">多语言Demo-Kotlin版</string>
    <string name="text_language">语言</string>
    <string name="text_language_auto">跟随系统</string>
    <string name="text_language_en">English</string>
    <string name="text_language_zh">简体中文</string>
    <string name="text_language_zh_rTW">繁體中文</string>
    <string name="settings">设置</string>
    <string name="app_name_label">App应用名：%s</string>
    <string name="system_language">当前系统语言：%1$s</string>
    <string name="user_select_language">当前用户选择语言：%s</string>
    <string name="select_language">切换语言</string>
    <string name="please_select_language">请选择语言</string>
    <string name="goto_test">去测试</string>
    <string name="application_string">Application的String: %s</string>
    <string name="activity_string">Activity的String: %s</string>
    <string name="application_context">Application的Context: %s</string>
    <string name="activity_context">Activity的Context: %s</string>
    <string name="test_application_string">测试Application的String</string>
    <string name="test_activity_string">测试Activity的String</string>
    <string name="test_success">测试成功！</string>

    <string-array name="language_titles">
        <item>跟随系统</item>
        <item>English</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>
    <string-array name="language_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="fragment_string">Fragment Context String 测试成功！</string>
    <string name="test_start">开始测试Context</string>
    <string name="test_start_application">开始测试ApplicationContext</string>
    <string name="click">点击</string>
    <string name="fragment_application_string">Fragment Application String 测试成功！</string>
    <string name="test_fragment">测试Fragment</string>
    <string name="activity_custom_refresh_way_test">这里是自定义刷新Activity界面方式的测试，请自己实现！</string>
</resources>
