<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.TestActivity">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_application_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:text="@string/application_context" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_activity_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:text="@string/activity_context"/>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_select_language"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>